test/suites/fail-parse/P-004-let-1.expected
  × Failed parsing

Error: P-003

  × Unexpected "let", expected "comatch", "(", "?", "\\", "_", "identifier", "number literal"
   ╭─[P-004-let-1.pol:3:23]
 2 │ 
 3 │ let x : Nat { let x : let ty := Nat; ty := Z; S(x) }
   ·                       ───
   ╰────

Error: P-003

  × Unexpected ":=", expected "(", ":"
   ╭─[P-004-let-1.pol:3:30]
 2 │ 
 3 │ let x : Nat { let x : let ty := Nat; ty := Z; S(x) }
   ·                              ──
   ╰────
