test/suites/fail-parse/P-004-let-1.pol
data Nat { Z, S(x: Nat)}

let x : Nat { let x : let ty := Nat; ty := Z; S(x) }
